kubernetes/deploy/hello-world_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "helloworld-devel"
  labels:
    name: "helloworld-devel"
