kubernetes/deploy/hello-world_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-world
  namespace: "helloworld-prod"
  labels:
    app: hello-world
    tier: frontend
    version: v.1.0
spec:
  replicas: 4
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: hello-world
      tier: frontend
  template:
    metadata:
      labels:
        app: hello-world
        tier: frontend
        version: v.1.2
    spec:
      containers:
      - name: hello-world
        image: 995127052041.dkr.ecr.us-east-1.amazonaws.com/exfo-poc:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 30
      imagePullSecrets:
      - name: registry-pull
