kubernetes/deploy/hello-world_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-world
  namespace: "helloworld-devel"
  labels:
    app: hello-world
    tier: frontend
    version: v1.0
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: hello-world
    tier: frontend
  type: LoadBalancer
