kubernetes/deploy/hello-world_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world
  namespace: "helloworld-devel"
  labels:
    app: hello-world
    tier: frontend
    version: v.1.0
  annotations:
    traefik.frontend.rule.type: PathPrefix
    traefik.frontend.entryPoints: https
spec:
  rules:
  - host: "helloworld-prod.exfo.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world
          servicePort: 80
